--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
              <li>Solve the underemployment crisis. Ensure that every Australian is not only adequately trained, but also supported with job placements that make the best use of their skills, talent and knowledge.</li>
              <li>Solve the corruption crisis, the parliamentary inefficiency crisis, and the accountability crisis. Deliver integrity, transparency and competence in politics and a stronger, more democratic system, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations.</li>
              <li>Solve the police staffing crisis.</li>
-             <li>Protect our children, women and men from unfair treatment and harm, including from advertising like gambling adverts. Within the limits of our political system, I'll do what I can to protect everyone from injustice.</li>
+             <li>Protect our children, women and men from unfair treatment and harm, including from gambling ads and other advertising. Within the limits of our political system, I'll do what I can to protect everyone from injustice.</li>
 
             </ul>
             <p>Big claims? Yes. But at least I have a plan. At least I'm going to try.</p>
@@ -142,7 +142,7 @@
 
              <h2>How will we pay for this?</h2>
 
-             <p>Solving every major crisis we are facing will cost money. Luckily we have big corporations operating major export industries from South Australia with large profit margins who can afford to pay. You can read more about this in Policy 3 and in the article "Paying for good policy" below.</p>
+             <p>Solving every major crisis we are facing will cost money. Luckily we have big corporations operating major export industries from South Australia with large profit margins who can afford to pay. You can read more about this in Policy 2 and in the article "Paying for good policy" below.</p>
 
              <h2>My policies</h2>
 
@@ -156,7 +156,7 @@
 
              <p>Natural resources under the ground legally belong to the state, which means they belong to all South Australians. Giving away these resources to large corporations for pennies is one of the biggest rorts in our history. The Quality of Life Commission will charge whatever rate maximises benefits for South Australians, which will fund not only the Commission itself but all of the other policies below. Other environmentally costly export industries may also be charged, where the Commission regards these charges as necessary to fund necessary policies, or otherwise beneficial to quality of life in Australia.</p>
 
-             <h4>3. Provide cheap electricity, cheap healthy foods</h4>
+             <h4>3. Provide cheap electricity and cheap healthy foods</h4>
 
              <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. The Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality, rather than handing out unconditional subsidies and rebates that can raise prices. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. The Quality of Life Commission will pay for this with measures such as Policy 2 above.</p>
 
@@ -198,7 +198,7 @@
 
              <p>Policy 6 above will reduce reliance on skilled immigration. Training underemployed and undertrained Australians and providing more paid work experience opportunities will negate the need for bringing so many skilled visa holders into South Australia. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
 
-             <p>Although immigration policy is primarily a federal government matter, it is important for me to have policies on this at the state level, since it sends a message to the federal government. Meanwhile, if implemented, Policy 8 will reduce the demand for skilled workers to move to South Australia, reduce the need for state-sponsored skilled visas, and reduce the demand for the federal government to hand out other skilled visas.</p>
+             <p>Although immigration policy is primarily a federal government matter, it is important for me to have policies on this at the state level, since it sends a message to the federal government. Meanwhile, if implemented, Policy 6 will reduce the demand for skilled workers to move to South Australia, reduce the need for state-sponsored skilled visas, and reduce the demand for the federal government to hand out other skilled visas.</p>
 
              <p>The Albanese government's current plan is net immigration of 230 000 per year, a rate of 2.3 million people per decade. The opposition's plan is to reduce this to a net intake of 130 000 per year, a rate of 1.3 million per decade. Neither has a comprehensive plan like my plan above to end our reliance on high rates of worker immigration.
              </p>
@@ -233,7 +233,7 @@
              
              <p>The Quality of Life Commission will pay for this with measures such as Policy 2 above.</p>
 
-             <h3>Policing<h3>
+             <h3>Policing</h3>
 
               <h4>11. Solve the police staffing crisis</h4>
 
@@ -255,7 +255,7 @@
 
               <h4>15. Make environmentally friendly choices more affordable</h4>
 
-              <p>In addition to Policies 6 and 7, the Quality of Life Commission will be charged with finding other ways to reduce pollution by making environmentally friendly choices more affordable.</p>
+              <p>The Quality of Life Commission will be charged with finding other ways to reduce pollution by making environmentally friendly choices more affordable.</p>
 
              <h3>Corruption</h3>
 
@@ -312,7 +312,7 @@
              <article>
               <h3>More details on the underemployment crisis</h3>
               <p>
-               The official (low hours) underemployment rate is 5.9%, and the real underemployment rate may be well over 20%. 5.9% is only the employed Australians who are working fewer hours than they would like to. It doesn't include the 4.5% of unemployed Australians who are seeking a job, which makes a total of more than 10% of Australians who would like more hours of work than they have. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use, meaning that the true underemployment rate, in the broader sense, may be well over 20%. Unlike the piecemeal plans of our political parties, my plan outlined above will fully resolve this issue if well-implemented, especially policies 8 and 9.
+               The official (low hours) underemployment rate is 5.9%, and the real underemployment rate may be well over 20%. 5.9% is only the employed Australians who are working fewer hours than they would like to. It doesn't include the 4.5% of unemployed Australians who are seeking a job, which makes a total of more than 10% of Australians who would like more hours of work than they have. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use, meaning that the true underemployment rate, in the broader sense, may be well over 20%. Unlike the piecemeal plans of our political parties, my plan outlined above will fully resolve this issue if well-implemented, especially Policies 6 and 7.
               </p>
               <p>
                In 2024, over 30% of Computing and Information Systems university graduates reported that they did not have full-time employment 4 to 6 months after graduating, and of those with full-time employment, an additional 28% reported that they were not fully utilising their skills and education, meaning only about 50% were working full-time in an area that fully utilised their skills. Even within Engineering, 15% of graduates did not have full-time employment and an additional 23% reported they were not fully utilising their skills and education. For all degrees combined, 26% of graduates were not in full-time employment and an additional 28% of full-time employed graduates reported that they were not fully utilising their skills and knowledge. Many graduates are rejected from relevant jobs because employers prefer to bring people in from overseas with a more impressive CV. The federal Labor government plans to bring 1 million more people in on visas over the next 4 years, leading to an increase in the population of 1.4 million, about the size of the entire city of Adelaide. This has benefits, especially for property developers, immigration lawyers, and large corporations that work to keep their profits high by keeping salaries low and their training costs low, but Australians have been gaslit by politicians and some of their followers on the downsides of this for everyone else, which only adds to the misguided hatred such as racism that they claim to oppose. We are told by politicians that several million more people per decade is necessary to address skills shortages and has negligible downsides, but there are over two million underemployed or unemployed Australians that can be trained to solve almost all of our real skills shortages, and who desperately need that extra income, many of whom already have the necessary education. 
@@ -360,7 +360,7 @@
                     </a>
                 </div>
               
-              <p>Additional policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself. If you're interested in a face to face meeting or a phonecall, please email me about that too.</p>
+              <p>Additional policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself. If you're interested in a face to face meeting or a phone call, please email me about that too.</p>
 
             <p class="contact-email">
                 <strong>Email:</strong> <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>
