--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
              <h4>5a. Charge landlords if they don't rent or sell to the rightful resident</h4>
              <h4>5b. Provide HECS-style loans to assist the rightful resident at a regulated price</h4>
 
-             <p>We've all heard stories of long-term renters being kicked out of their home where they'd been living for years or decades, just so that the property can be sold to someone with more money. Most of us recognise this as an injustice, and it also incentivises investors owning huge number of investment properties. To solve this we can:</p>
+             <p>We've all heard stories of long-term renters being kicked out of their home where they'd been living for years or decades, just so that the property can be sold to someone with more money. Most of us recognise this as an injustice, and it also incentivises investors owning a huge number of investment properties. To solve this we can:</p>
 
              <p>Incentivise property investors to do the right thing, by charging them if they do the wrong thing. For example, property investors will be charged if they have evicted someone from their home just to sell the property to someone wealthier, or if they have otherwise failed to allow the property to be used by the person or family with the greatest moral right to the property. The Quality of Life Commission will be instructed to devise a system for determining and enforcing this, and will determine the rate of these variable charges to ensure a fair price.</p>
 
@@ -194,7 +194,7 @@
 
              <h4>7. Maintain the refugee intake but reduce net immigration</h4>
 
-             <p>During the Covid border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short term effects. In the long term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow at millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
+             <p>During the Covid border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short term effects. In the long term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow do to an intake of millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
 
              <p>Policy 6 above will reduce reliance on skilled immigration. Training underemployed and undertrained Australians and providing more paid work experience opportunities will negate the need for bringing so many skilled visa holders into South Australia. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
 
@@ -237,7 +237,7 @@
 
               <h4>11. Solve the police staffing crisis</h4>
 
-              <p>Provide funding to create a new unarmed, ununiformed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better procedures. Policies 1 and 5 above will be implemented so to pay for this.</p>
+              <p>Provide funding to create a new unarmed, ununiformed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better procedures. The Quality of Life Commission will pay for this with measures such as Policy 2 above.</p>
 
              <h3>Pollution, traffic congestion and the algae crisis</h3>
 
@@ -278,7 +278,7 @@
 
               <h4>18. Free sport and healthy activity classes</h4>
 
-              <p>Provide sporting clubs and similar clubs with the funding to provide South Australians with at least one free group lesson per year. Policies 1 and 5 above will be implemented so to pay for this.</p>
+              <p>Provide sporting clubs and similar clubs with the funding to provide South Australians with at least one free group lesson per year. The Quality of Life Commission will pay for this with measures such as Policy 2 above.</p>
 
               <h4>19. Address the environmental causes of mental illness and violence</h4>
 
