--- a/indexwithpolicy.html
+++ b/indexwithpolicy.html
@@ -158,7 +158,7 @@
 
              <h4>3. Provide cheap electricity and cheap healthy foods</h4>
 
-             <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. The Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality, rather than handing out unconditional subsidies and rebates that can raise prices. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. The Quality of Life Commission will pay for this with measures such as Policy 2 above.</p>
+             <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. The Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality, rather than handing out unconditional subsidies and rebates that can increase profit margins rather than being fully handed-on to the consumer. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. The Quality of Life Commission will pay for this with measures such as Policy 2 above.</p>
 
              <h4>4. Provide HECS-style loans for efficiency upgrades</h4>
 
