--- a/index.html
+++ b/index.html
@@ -111,19 +111,23 @@
 
         <section id="plan" class="content-section responsive-width">
             <h2>My plan</h2>
-            <p>Hi. I'm Alec Gargett and I have a plan.</p>
-            <p>My plan aims to:</p>
+            <p>Hi. I'm Alec Gargett and I have a plan:</p>
             <ul>
-             <li>Solve the cost of living crisis while protecting and improving our quality of life, our environment, the beauty of our city and our suburbs, and our public services.</li>
-             <li>Solve the algae crisis and stop corporations and our government from contributing to the pollution crises that are causing it.</li>
-             <li>Solve the health care crisis, including the ramping crisis, and the aged care crisis.</li>
-             <li>Solve the underemployment crisis. Ensure that every Australian is not only adequately trained, but also supported with job placements that make the best use of their skills, talent and knowledge.</li>
-             <li>Solve the corruption crisis, the parliamentary inefficiency crisis, and the accountability crisis. Deliver integrity, transparency and competence in politics and a stronger, more democratic system, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations.</li>
-             <li>Solve the police staffing crisis.</li>
-             <li>Protect our children, women and men from unfair treatment and harm, including from gambling ads and other advertising. Within the limits of our political system, I'll do what I can to protect everyone from injustice.</li>
-
+             <li>Solve the cost of living crisis while protecting and improving our quality of life, our environment, the beauty of our city and our suburbs, and our public services;</li>
+             <li>Solve the algae crisis and stop corporations and our government from contributing to the pollution crises that are causing it;</li>
+             <li>Solve the health care crisis, including the ramping crisis, and the aged care crisis;</li>
+             <li>Solve the underemployment crisis. Ensure that every Australian is not only adequately trained, but also supported with job placements that make the best use of their skills, talent and knowledge;</li>
+             <li>Solve the corruption crisis, the parliamentary inefficiency crisis, and the accountability crisis. Deliver integrity, transparency and competence in politics and a stronger, more democratic system, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations.;</li>
+             <li>Solve the police staffing crisis;</li>
+             <li>Protect our children, women and men from unfair treatment and harm, including from gambling ads and other advertising. Within the limits of our political system, I'll do what I can to protect everyone from injustice;</li>
             </ul>
-            <p>Big claims? Yes. But at least I have a plan. At least I'm going to try.</p>
+            <!-- <p>That might seem like a lot, but that's only because the bar has been set so low. Most of the above problems aren't hard to solve. Politicians just aren't really trying to solve them. Their skills are in campaigning and not policy, and think they will get paid just as much, or more, if they don't do the necessary policy work to solve anything.</p> -->
+            <p>There are two crucial components to my plan:</p>
+            <ul>
+             <li>Real policy solutions to all of the above, which will continue to be improved further over time, including through feedback from the electorate;</li>
+             <li>A viable and simple political strategy: draw positive attention to these policy ideas.</p>
+            <p>We need to send a message to the federal and state government and the corporate political parties, and we need to create a new type of politics in Australia. To do that, we need to support a movement of candidates that demonstrate <em>through their own policies</em> that they are putting their electorate ahead of their party, and that they have the necessary policy skills to contribute to solving our problems.</p>
+            <p>Together we can send a message to our politicians that if they won't do their job, we'll elect someone who will. This will result in a government that tries much harder to solve our problems, in which more of our politicians have the necessary policy skills to do so.</p>
             <p>Sometimes it seems like most of our politicians and political parties aren't even trying. They play around the edges; throw a lot of money at problems without solving their causes; or choose policies that mitigate some problems while making other problems worse. Sometimes they choose a hopeless political strategy to boot, and for almost all political parties it's a divisive strategy.</p>
             <p>My plan involves a comprehensive set of policy solutions, respect for the whole community, and a pragmatic strategy to support a democratic political movement beyond our own electorate here in Waite, and beyond state politics, to influence politics for the better at the federal and international levels. We need better policies and we need a better way of doing politics, and if I'm elected I'll use the platform of state parliament to do my part in both.</p>
             <p>I will be explaining my policies in more detail between now and the election, not only here on the website, but in video form on platforms like Facebook, Instagram and Youtube. By the election in March next year, I'll get my plan across to as many people in Waite as I can, and I could use your support.</p>
@@ -144,7 +148,9 @@
 
              <p>Solving every major crisis we are facing will cost money. Luckily we have big corporations operating major export industries from South Australia with large profit margins who can afford to pay. You can read more about this in Policy 2 and in the article "Paying for good policy" below.</p>
 
-             <h2>My policies</h2>
+             <h2>My initial policies</h2>
+
+             <p>I will always be seeking to further improve my policies and ensure they are aligned with the goals of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
              <h3>Quality of life and cost of essentials</h3>
 
@@ -158,7 +164,7 @@
 
              <h4>3. Provide cheap electricity and cheap healthy foods</h4>
 
-             <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. The Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality, rather than handing out unconditional subsidies and rebates that can increase profit margins rather than being fully handed-on to the consumer. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. The Quality of Life Commission will pay for this with measures such as Policy 2 above.</p>
+             <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. The Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality, rather than handing out unconditional subsidies and rebates that can increase profit margins rather than being fully passed on to the consumer. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. The Quality of Life Commission will pay for this with measures such as Policy 2 above.</p>
 
              <h4>4. Provide HECS-style loans for efficiency upgrades</h4>
 
@@ -194,7 +200,7 @@
 
              <h4>7. Maintain the refugee intake but reduce net immigration</h4>
 
-             <p>During the Covid border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short term effects. In the long term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow do to an intake of millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
+             <p>During the Covid border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short term effects. In the long term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow due to an intake of millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
 
              <p>Policy 6 above will reduce reliance on skilled immigration. Training underemployed and undertrained Australians and providing more paid work experience opportunities will negate the need for bringing so many skilled visa holders into South Australia. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
 
@@ -312,7 +318,7 @@
              <article>
               <h3>More details on the underemployment crisis</h3>
               <p>
-               The official (low hours) underemployment rate is 5.9%, and the real underemployment rate may be well over 20%. 5.9% is only the employed Australians who are working fewer hours than they would like to. It doesn't include the 4.5% of unemployed Australians who are seeking a job, which makes a total of more than 10% of Australians who would like more hours of work than they have. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use, meaning that the true underemployment rate, in the broader sense, may be well over 20%. Unlike the piecemeal plans of our political parties, my plan outlined above will fully resolve this issue if well-implemented, especially Policies 6 and 7.
+               The official (low hours) underemployment rate is 5.9%, and the real underemployment rate may be well over 20%. 5.9% is only the employed Australians who are working fewer hours than they would like to. It doesn't include the 4.5% of unemployed Australians who are seeking a job, which makes a total of more than 10% of Australians who would like more hours of work than they have. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use. This means that the true underemployment rate, in the broader sense, may be well over 20%. Unlike the piecemeal plans of our political parties, my plan outlined above will fully resolve this issue if well-implemented, especially Policies 6 and 7.
               </p>
               <p>
                In 2024, over 30% of Computing and Information Systems university graduates reported that they did not have full-time employment 4 to 6 months after graduating, and of those with full-time employment, an additional 28% reported that they were not fully utilising their skills and education, meaning only about 50% were working full-time in an area that fully utilised their skills. Even within Engineering, 15% of graduates did not have full-time employment and an additional 23% reported they were not fully utilising their skills and education. For all degrees combined, 26% of graduates were not in full-time employment and an additional 28% of full-time employed graduates reported that they were not fully utilising their skills and knowledge. Many graduates are rejected from relevant jobs because employers prefer to bring people in from overseas with a more impressive CV. The federal Labor government plans to bring 1 million more people in on visas over the next 4 years, as part of a total increase in the population of 1.4 million, about the size of the entire city of Adelaide. This has benefits, especially for property developers, immigration lawyers, and large corporations that work to keep their profits high by keeping salaries low and their training costs low, but Australians have been gaslit by politicians and some of their followers on the downsides of this for everyone else, which only adds to the misguided hatred such as racism that they claim to oppose. We are told by politicians that several million more people per decade is necessary to address skills shortages and has negligible downsides, but there are over two million underemployed or unemployed Australians that can be trained to solve almost all of our real skills shortages, and who desperately need that extra income, many of whom already have the necessary education. 
