--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
              <li>Solve the algae crisis and stop corporations and our government from contributing to the pollution crises that are causing it;</li>
              <li>Solve the health care crisis, including the ramping crisis, and the aged care crisis;</li>
              <li>Solve the underemployment crisis. Ensure that every Australian is not only adequately trained, but also supported with job placements that make the best use of their skills, talent and knowledge;</li>
-             <li>Solve the corruption crisis, the parliamentary inefficiency crisis, and the accountability crisis. Deliver integrity, transparency and competence in politics and a stronger, more democratic system, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations.;</li>
+             <li>Solve the corruption crisis, the parliamentary inefficiency crisis, and the accountability crisis. Deliver integrity, transparency and competence in politics and a stronger, more democratic system, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations;</li>
              <li>Solve the police staffing crisis;</li>
              <li>Protect our children, women and men from unfair treatment and harm, including from gambling ads and other advertising. Within the limits of our political system, I'll do what I can to protect everyone from injustice;</li>
             </ul>
