--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
              <li>Solve the cost of living crisis while protecting and improving our quality of life, our environment, the beauty of our city and our suburbs, and our public services;</li>
              <li>Solve the algae crisis and stop corporations and our government from contributing to the pollution crises that are causing it;</li>
              <li>Solve the health care crisis, including the ramping crisis, and the aged care crisis;</li>
-             <li>Solve the underemployment crisis. Ensure that every Australian is not only adequately trained, but also supported with job placements that make the best use of their skills, talent and knowledge;</li>
-             <li>Solve the corruption crisis, the parliamentary inefficiency crisis, and the accountability crisis. Deliver integrity, transparency and competence in politics and a stronger, more democratic system, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations;</li>
+             <li>Solve the underemployment crisis; ensure that every Australian is not only adequately trained, but also supported with job placements that make the best use of their skills, talent and knowledge;</li>
+             <li>Solve the corruption crisis, the parliamentary inefficiency crisis, and the accountability crisis; deliver integrity, transparency and competence in politics and a stronger, more democratic system, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations;</li>
              <li>Solve the police staffing crisis;</li>
-             <li>Protect our children, women and men from unfair treatment and harm, including from gambling ads and other advertising. Within the limits of our political system, I'll do what I can to protect everyone from injustice;</li>
+             <li>Protect our children, women and men from unfair treatment and harm, including from gambling ads and other advertising. Within the limits of our political system, I'll do what I can to protect everyone from injustice.</li>
             </ul>
             <!-- <p>That might seem like a lot, but that's only because the bar has been set so low. Most of the above problems aren't hard to solve. Politicians just aren't really trying to solve them. Their skills are in campaigning and not policy, and think they will get paid just as much, or more, if they don't do the necessary policy work to solve anything.</p> -->
             <p>There are two crucial components to my plan:</p>
