--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <section id="plan" class="content-section responsive-width">
             <h2>My plan</h2>
-            <p>Hi. I'm Alec Gargett and I have a plan:</p>
+            <p>Hi. I'm Alec Gargett and I have a plan to:</p>
             <ul>
              <li>Solve the cost of living crisis while protecting and improving our quality of life, our environment, the beauty of our city and our suburbs, and our public services;</li>
              <li>Solve the algae crisis and stop corporations and our government from contributing to the pollution crises that are causing it;</li>
@@ -124,7 +124,7 @@
             <!-- <p>That might seem like a lot, but that's only because the bar has been set so low. Most of the above problems aren't hard to solve. Politicians just aren't really trying to solve them. Their skills are in campaigning and not policy, and think they will get paid just as much, or more, if they don't do the necessary policy work to solve anything.</p> -->
             <p>There are two crucial components to my plan:</p>
             <ul>
-             <li>Real policy solutions to all of the above, which will continue to be improved further over time, including through feedback from the electorate;</li>
+             <li>Real policy solutions to all of the above, which are detailed below and will continue to be improved further over time, including through feedback from the electorate;</li>
              <li>A viable and simple political strategy: draw positive attention to these policy ideas.</p>
             <p>We need to send a message to the federal and state government and the corporate political parties, and we need to create a new type of politics in Australia. To do that, we need to support a movement of candidates that demonstrate <em>through their own policies</em> that they are putting their electorate ahead of their party, and that they have the necessary policy skills to contribute to solving our problems.</p>
             <p>Together we can send a message to our politicians that if they won't do their job, we'll elect someone who will. This will result in a government that tries much harder to solve our problems, in which more of our politicians have the necessary policy skills to do so.</p>
