--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <p>Hi. I'm Alec Gargett and I have a plan to:</p>
             <ul>
              <li>Solve the cost of living crisis while protecting and improving our quality of life, our environment, the beauty of our city and our suburbs, and our public services;</li>
-             <li>Solve the algae crisis and stop corporations and our government from contributing to the pollution crises that are causing it;</li>
+             <li>Solve the algae crisis and stop corporations and the government from contributing to the pollution crises that are causing it;</li>
              <li>Solve the health care crisis, including the ramping crisis, and the aged care crisis;</li>
              <li>Solve the underemployment crisis; ensure that every Australian is not only adequately trained, but also supported with job placements that make the best use of their skills, talent and knowledge;</li>
              <li>Solve the corruption crisis, the parliamentary inefficiency crisis, and the accountability crisis; deliver integrity, transparency and competence in politics and a stronger, more democratic system, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations;</li>
@@ -128,9 +128,9 @@
              <li>A viable and simple political strategy: draw positive attention to these policy ideas.</p>
             </ul>
             <p>We need to send a message to the federal and state government and the corporate political parties, and we need to create a new type of politics in Australia. To do that, we need to support a movement of candidates that demonstrate <em>through their own policies</em> that they are putting their electorate's goals ahead of their party's agenda or any other agenda, and that they have the necessary policy skills to contribute to solving our problems.</p>
-            <p>Together we can send a message to our government that if they won't do their job, we'll elect someone who will. This will result in a government that tries much harder to solve our problems, in which more of our politicians have the necessary policy skills to do so.</p>
+            <p>Together we can send a message to the government that if they won't do their job, we'll elect someone who will. This will result in a government that tries much harder to solve our problems. It will also result in a government that has the necessary policy skills to do so.</p>
             <p>Sometimes it seems like most of our politicians and political parties aren't even trying. They play around the edges; throw a lot of money at problems without solving their causes; or choose policies that mitigate some problems while making other problems worse. Sometimes they choose a hopeless political strategy to boot, and for almost all political parties it's a divisive strategy.</p>
-            <p>My plan involves a comprehensive set of policy solutions, respect for the whole community, and a pragmatic strategy to support a democratic political movement beyond our own electorate here in Waite, and beyond state politics, to influence politics for the better at the federal and international levels. We need better policies and we need a better way of doing politics, and if I'm elected I'll use the platform of state parliament to do my part in both.</p>
+            <p>My plan involves a comprehensive set of policy solutions, respect for the whole community, and a pragmatic strategy to support a democratic political movement beyond our own electorate here in Waite, and beyond state politics, to influence politics for the better at the federal and international levels. We need better policies and we need a better way of doing politics. If I'm elected, I'll use the platform of state parliament to do my part in both.</p>
             <p>I will be explaining my policies in more detail between now and the election, not only here on the website, but in video form on platforms like Facebook, Instagram and Youtube. By the election in March next year, I'll get my plan across to as many people in Waite as I can, and I could use your support.</p>
             <p>Following me on social media or video platforms so that you can see my policy videos and perhaps even share them around would be a great help. So would sharing this website with whoever you think might be interested.</p>
             <p>
@@ -308,7 +308,7 @@
               </ul>
 
               <p>
-               The biggest missed opportunity for government revenue is the donation of our natural resources to corporations instead of selling them. Natural resources below the ground legally belong to the state, which means they belong to South Australians, but our government gives those natural resources away for free to corporations, instead of selling them. Not only is this a massive missed opportunity for government revenue, it's one of the biggest rorts in our country's history.
+               The biggest missed opportunity for government revenue is the donation of our natural resources to corporations instead of selling them. Natural resources below the ground legally belong to the state, which means they belong to South Australians, but the government gives those natural resources away for free to corporations, instead of selling them. Not only is this a massive missed opportunity for government revenue, it's one of the biggest rorts in our country's history.
               </p>
 
               <p>
