--- a/index.html
+++ b/index.html
@@ -140,18 +140,23 @@
             </p>
             </section>
 
-        <section id="policy" class="content-section responsive-width">
+        <section id="qualityoflifecrisis" class="content-section responsive-width">
              <h2>The Quality of Life Crisis</h2>
 
              <p>All of the crises I mentioned above, including the cost of living crisis, together cause an even bigger and more fundamental crisis: the quality of life crisis. Reducing the cost of living by reducing our quality of life is not a real solution, since fundamentally the main crisis we are trying to solve when we address cost of living is a quality of life crisis. For this reason, my policies address not only the cost of living crisis but all of the other crises listed above.</p>
-
+        </section>
+             
+        <section id="howtopay" class="content-section responsive-width">
              <h2>How will we pay for this?</h2>
 
              <p>Solving every major crisis we are facing will cost money. Luckily we have big corporations operating major export industries from South Australia with large profit margins who can afford to pay. You can read more about this in Policy 2 and in the article "Paying for good policy" below.</p>
+        </section>
+
+        <section id="policy" class="content-section responsive-width">
 
              <h2>My initial policies</h2>
 
-             <p>I will always be seeking to further improve my policies and ensure they are aligned with the goals of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
+             <p>I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
              <h3>Quality of life and cost of essentials</h3>
 
@@ -207,7 +212,7 @@
 
              <p>Although immigration policy is primarily a federal government matter, it is important for me to have policies on this at the state level, since it sends a message to the federal government. Meanwhile, if implemented, Policy 6 will reduce the demand for skilled workers to move to South Australia, reduce the need for state-sponsored skilled visas, and reduce the demand for the federal government to hand out other skilled visas.</p>
 
-             <p>The Albanese government's current plan is net immigration of 230 000 per year, a rate of 2.3 million people per decade. The opposition's plan is to reduce this to a net intake of 130 000 per year, a rate of 1.3 million per decade. Neither has a comprehensive plan like my plan above to end our reliance on high rates of worker immigration.
+             <p>The Albanese government's current plan is net immigration of around 230 000 per year, a rate of 2.3 million people per decade. The opposition's plan is to reduce this to a net intake of 130 000 per year, a rate of 1.3 million per decade. Neither has a comprehensive plan like my plan above to end our reliance on high rates of worker immigration.
              </p>
 
              <h4>8. Build housing the right way</h4>
@@ -319,7 +324,7 @@
              <article>
               <h3>More details on the underemployment crisis</h3>
               <p>
-               The official (low hours) underemployment rate is 5.9%, and the real underemployment rate may be well over 20%. 5.9% is only the employed Australians who are working fewer hours than they would like to. It doesn't include the 4.5% of unemployed Australians who are seeking a job, which makes a total of more than 10% of Australians who would like more hours of work than they have. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use. This means that the true underemployment rate, in the broader sense, may be well over 20%. Unlike the piecemeal plans of our political parties, my plan outlined above will fully resolve this issue if well-implemented, especially Policies 6 and 7.
+               The official unemployment rate for South Australia in October 2025 was 4.5% and the partial underemployment rate was 6.3%, for a total official underutilization rate of 10.8%. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use. This means that the true underemployment rate, in the broader sense, may be well over 20%. Unlike the piecemeal plans of our political parties, my plan outlined above will fully resolve this issue if well-implemented, especially Policies 6 and 7.
               </p>
               <p>
                In 2024, over 30% of Computing and Information Systems university graduates reported that they did not have full-time employment 4 to 6 months after graduating, and of those with full-time employment, an additional 28% reported that they were not fully utilising their skills and education, meaning only about 50% were working full-time in an area that fully utilised their skills. Even within Engineering, 15% of graduates did not have full-time employment and an additional 23% reported they were not fully utilising their skills and education. For all degrees combined, 26% of graduates were not in full-time employment and an additional 28% of full-time employed graduates reported that they were not fully utilising their skills and knowledge. Many graduates are rejected from relevant jobs because employers prefer to bring people in from overseas with a more impressive CV. The federal Labor government plans to bring 1 million more people in on visas over the next 4 years, as part of a total increase in the population of 1.4 million, about the size of the entire city of Adelaide. This has benefits, especially for property developers, immigration lawyers, and large corporations that work to keep their profits high by keeping salaries low and their training costs low, but Australians have been gaslit by politicians and some of their followers on the downsides of this for everyone else, which only adds to the misguided hatred such as racism that they claim to oppose. We are told by politicians that several million more people per decade is necessary to address skills shortages and has negligible downsides, but there are over two million underemployed or unemployed Australians that can be trained to solve almost all of our real skills shortages, and who desperately need that extra income, many of whom already have the necessary education. 
