--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <section id="howtopay" class="content-section responsive-width">
              <h2>How will we pay for this?</h2>
 
-             <p>Solving every major crisis we are facing will cost money. Luckily we have big corporations operating major export industries from South Australia with large profit margins who can afford to pay. You can read more about this in Policy 2 and in the article "Paying for good policy" below.</p>
+             <p>Solving every major crisis we are facing will cost money. We need to build more hospitals and aged care, create more emergency departments, hire police support officers, expand the Pharmaceutical Benefits Scheme to include non-Pharmaceutical essentials, and more, all detailed below. Luckily we have big corporations operating major export industries from South Australia with large profit margins who can afford to pay. You can read more about this in Policy 2 and in the article "Paying for good policy" underneath the policy section.</p>
         </section>
 
         <section id="policy" class="content-section responsive-width">
@@ -162,21 +162,29 @@
 
              <h4>1. Create a Quality of Life Commission</h4>
 
-             <p>Solve the cost of living crisis and the quality of life crisis, by creating a Cost of Living and Quality of Life Commission, which I will refer to here simply as the Quality of Life Commission. Give the Quality of Life Commission the power to regulate against corporations and landlords contributing to the quality of life crisis, charge those corporations and landlords, and spend this revenue on reducing the cost of living and improving quality of life further. Institute constitutional reform to facilitate this if necessary. This will greatly increase the speed and efficiency with which we can address the quality of life crisis, compared to relying exclusively on the slow processes of a parliament that lacks the expertise for technical matters. It also means that parliament can direct the Quality of Life Commission to implement policies that require ongoing regulatory involvement such as the following:</p>
+             <p>Solve the cost of living crisis and the quality of life crisis, by creating a Cost of Living and Quality of Life Commission, which I will refer to here simply as the Quality of Life Commission. Give the Quality of Life Commission the power to:</p>
+             <ul>
+              <li>Regulate against corporations and landlords contributing to the quality of life crisis</li>
+              <li>Charge those corporations and landlords for harmful, inflationary or otherwise costly behaviour</li>
+              <li>Spend this revenue on reducing the cost of living and improving quality of life further. Advocate for constitutional reform that will allow us to further improve this commission by allowing it to implement its own variable charges.</p>
+             
+             <p>The Quality of Life Commission will also have the mandate and resources necessary to investigate the government itself for inefficient spending such private contractor rorts, and to close regulatory loopholes in any sector that is being taken advantage of by bad actors.</p>
+              
+             <p>This Commission will greatly increase the speed and efficiency with which we can address the quality of life crisis, compared to relying exclusively on the slow processes of a parliament that lacks the expertise for technical matters. It also means that parliament can direct the Quality of Life Commission to implement policies that require ongoing regulatory involvement such as the following:</p>
 
              <h4>2. Stop giving our resource wealth away (almost) for free</h4>
 
-             <p>Natural resources under the ground legally belong to the state, which means they belong to all South Australians. Giving away these resources to large corporations for pennies is one of the biggest rorts in our history. The Quality of Life Commission will charge whatever rate maximises benefits for South Australians, which will fund not only the Commission itself but all of the other policies below. Other environmentally costly export industries may also be charged, where the Commission regards these charges as necessary to fund necessary policies, or otherwise beneficial to quality of life in Australia.</p>
+             <p>Natural resources under the ground legally belong to the state, which means they belong to all South Australians. Giving away these resources to large corporations for pennies is one of the biggest rorts in our history. The Quality of Life Commission will charge whatever rate maximises benefits for South Australians, which will fund not only the Commission itself but all of the other policies below, including cost of living measures. Other environmentally costly international export industries may also be charged for those exports, where the Commission regards these charges as necessary to fund necessary policies, or otherwise beneficial to quality of life in Australia.</p>
 
              <h4>3. Provide cheap electricity and cheap healthy foods</h4>
 
-             <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. The Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality, rather than handing out unconditional subsidies and rebates that can increase profit margins rather than being fully passed on to the consumer. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. The Quality of Life Commission will pay for this with measures such as Policy 2 above.</p>
+             <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. In a similar manner to the Pharmaceutical Benefits Scheme, the Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. The Quality of Life Commission will pay for this with measures such as Policy 2 above.</p>
 
              <h4>4. Provide HECS-style loans for efficiency upgrades</h4>
 
              <p>Provide HECS-style loans for purchases that reduce costs and increase efficiency such as switching to electric heating, solar water heating, or repainting a dark roof to a heat-reflecting white. This will be designed to avoid causing increases in prices, and even reduce prices, by providing only enough to make the difference up to a target price.</p>
 
-             <h3>Housing and underemployment</h3>
+             <h3>Housing</h3>
 
              <h4>5. Keep people in their homes</h4>
 
@@ -198,7 +206,7 @@
 
              <p>Democratically determine an upper limit on yearly housing price growth. The Quality of Life Commission will enforce this limit with regulations on property investments, explained in Policy 3 below. The Quality of Life Commission will also devise a new housing price index that applies the constant quality principle including property size and location, to ensure that we are not only addressing the nominal cost of housing, but also improving the quality of housing that South Australians can afford.</p> -->
 
-             <h3>Quality of Life and Underemployment</h3>
+             <h3>Quality of life and underemployment</h3>
 
              <h4>6. Create a South Australian government employment service</h4>
 
