--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <section id="howtopay" class="content-section responsive-width">
              <h2>How will we pay for this?</h2>
 
-             <p>Solving every major crisis we are facing will cost money. We need to build more hospitals and aged care, create more emergency departments, hire police support officers, expand the Pharmaceutical Benefits Scheme to include non-Pharmaceutical essentials, and more, all detailed below. Luckily we have big corporations operating major export industries from South Australia with large profit margins who can afford to pay. You can read more about this in Policy 2 and in the article "Paying for good policy" underneath the policy section.</p>
+             <p>Solving every major crisis we are facing will cost money. We need to build more hospitals and aged care, create more emergency departments, hire police support officers, expand the Pharmaceutical Benefits Scheme to include non-Pharmaceutical essentials, and more, all detailed below. Luckily we have big corporations operating major export industries from South Australia with large profit margins that can afford to pay. You can read more about this in Policy 2 and in the article "Paying for good policy" underneath the policy section.</p>
         </section>
 
         <section id="policy" class="content-section responsive-width">
@@ -157,6 +157,15 @@
              <h2>My initial policies</h2>
 
              <p>I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
+
+             <h3>A warning to corporations</h3>
+
+             <p>Corporations often interfere in elections and in parliament to prevent policies that would benefit most people but reduce their profits. Some of these businesses, including at least some casinos, have ties to criminals and money laundering. Although they can no longer legally donate to candidates to prevent other candidates from getting elected, there are other legal and illegal means that they may attempt to use to influence elections. To prevent this we need to:</p>
+             <ul>
+              <li>Prohibit interference in elections or in politics to prevent policies that would benefit most people but reduce one's profits, and retroactively include interference in recent elections.</li>
+              <li>Ensure punishments are severe enough to successfully discourage this type of interference in our democracy; consider including asset confiscation for corporations and gaol time for individuals. The government should also consider setting up government-owned competitors in any industries guilty of these types of crimes.</li>
+              <li>ICAC must be given the resources and oversight to ensure they thoroughly investigate corporations and politicians for this type of interference in recent elections.</li>
+             </ul>
 
              <h3>Quality of life and cost of essentials</h3>
 
@@ -167,8 +176,9 @@
               <li>Regulate against corporations and landlords contributing to the quality of life crisis</li>
               <li>Charge those corporations and landlords for harmful, inflationary or otherwise costly behaviour</li>
               <li>Spend this revenue on reducing the cost of living and improving quality of life further. Advocate for constitutional reform that will allow us to further improve this commission by allowing it to implement its own variable charges.</p>
+             </ul>
              
-             <p>The Quality of Life Commission will also have the mandate and resources necessary to investigate the government itself for inefficient spending such private contractor rorts, and to close regulatory loopholes in any sector that is being taken advantage of by bad actors.</p>
+             <p>The Quality of Life Commission will also have the mandate and resources necessary to investigate the government itself for inefficient spending such as private contractor rorts, and to close regulatory loopholes in any sector that is being taken advantage of by bad actors.</p>
               
              <p>This Commission will greatly increase the speed and efficiency with which we can address the quality of life crisis, compared to relying exclusively on the slow processes of a parliament that lacks the expertise for technical matters. It also means that parliament can direct the Quality of Life Commission to implement policies that require ongoing regulatory involvement such as the following:</p>
 
@@ -257,7 +267,7 @@
 
               <h4>11. Solve the police staffing crisis</h4>
 
-              <p>Provide funding to create a new unarmed, ununiformed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better procedures. The Quality of Life Commission will pay for this with measures such as Policy 2 above.</p>
+              <p>Provide funding to create a new unarmed, plain-clothed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better hiring procedures. The Quality of Life Commission will pay for this with measures such as Policy 2 above.</p>
 
              <h3>Pollution, traffic congestion and the algae crisis</h3>
 
@@ -332,7 +342,7 @@
              <article>
               <h3>More details on the underemployment crisis</h3>
               <p>
-               The official unemployment rate for South Australia in October 2025 was 4.5% and the partial underemployment rate was 6.3%, for a total official underutilization rate of 10.8%. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use. This means that the true underemployment rate, in the broader sense, may be well over 20%. Unlike the piecemeal plans of our political parties, my plan outlined above will fully resolve this issue if well-implemented, especially Policies 6 and 7.
+               The official unemployment rate for South Australia in October 2025 was 4.5% and the partial underemployment rate was 6.3%, for a total official underutilisation rate of 10.8%. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use. This means that the true underemployment or underutilization rate, in the broader sense, may be well over 20%. Unlike the piecemeal plans of our political parties, my plan outlined above will fully resolve this issue if well-implemented, especially Policies 6 and 7.
               </p>
               <p>
                In 2024, over 30% of Computing and Information Systems university graduates reported that they did not have full-time employment 4 to 6 months after graduating, and of those with full-time employment, an additional 28% reported that they were not fully utilising their skills and education, meaning only about 50% were working full-time in an area that fully utilised their skills. Even within Engineering, 15% of graduates did not have full-time employment and an additional 23% reported they were not fully utilising their skills and education. For all degrees combined, 26% of graduates were not in full-time employment and an additional 28% of full-time employed graduates reported that they were not fully utilising their skills and knowledge. Many graduates are rejected from relevant jobs because employers prefer to bring people in from overseas with a more impressive CV. The federal Labor government plans to bring 1 million more people in on visas over the next 4 years, as part of a total increase in the population of 1.4 million, about the size of the entire city of Adelaide. This has benefits, especially for property developers, immigration lawyers, and large corporations that work to keep their profits high by keeping salaries low and their training costs low, but Australians have been gaslit by politicians and some of their followers on the downsides of this for everyone else, which only adds to the misguided hatred such as racism that they claim to oppose. We are told by politicians that several million more people per decade is necessary to address skills shortages and has negligible downsides, but there are over two million underemployed or unemployed Australians that can be trained to solve almost all of our real skills shortages, and who desperately need that extra income, many of whom already have the necessary education. 
