--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
              <p>I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
-             <h3>A warning to corporations and criminals</h3>
+             <h3>A warning to interfering corporations and criminals</h3>
 
              <h4>1. Eliminate and punish harmful corporate interference in our elections and our parliament</h4>
 
